--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -13,8 +13,8 @@ jobs:
           ref: development
       - name: setup keystore
         run: |
-          echo "${{ secrets.KEYSTORE }}" > kuno.keystore.asc
-          gpg -d --passphrase "${{ secrets.KEYSTORE_PASSPHRASE }}" --batch kuno.keystore.asc > android/app/kuno.keystore
+          echo "${{ secrets.KEYSTORE }}" > kunoid.keystore.asc
+          gpg -d --passphrase "${{ secrets.KEYSTORE_PASSPHRASE }}" --batch kunoid.keystore.asc > android/app/kunoid.keystore
       - name: install dependencies
         run: |
           yarn install
